--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -210,9 +210,7 @@
             scales: {
                 y: {
                     beginAtZero: true,
-                    ticks: {
-                        stepSize: 1 // force integer steps
-                    }
+                    ticks: {stepSize: 2}
                 }
             }
         }
