--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -18,7 +18,7 @@
             <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
                 <div class="dashboard-frame pie">
                     <h3>Venues by Floor</h3>    
-                    <canvas id="venueFloorLineChart"></canvas>
+                    <canvas id="venueFloorPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame pie">
                     <h3>Venues by Capacity</h3>
