--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -18,7 +18,7 @@
             <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
                 <div class="dashboard-frame pie">
                     <h3>Courses by Department</h3>
-                    <canvas id="courseDeptLineChart"></canvas>
+                    <canvas id="courseDeptPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Courses</h3>
