--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -148,7 +148,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-3d@1.0.0"></script>
-    
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
     {% block extra_scripts %}{% endblock %}
 </body>
 </html>
