--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -236,6 +236,7 @@
                 data: capacityCounts,
                 fill: false,
                 borderColor: '#ac36eb',
+                backgroundColor: '#ac36eb',
                 tension: 0.2, // curve smoothness
                 pointRadius: 5,
                 pointBackgroundColor: '#FF6384'
