--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -84,7 +84,7 @@
                     <input type="time" id="startTime" name="startTime" required>
                 </div><br>
 
-                <label>Exam End Date & Time</label>
+                <label>Exam End Date & Time</label>     
                 <div style="display: flex; gap: 2%;">
                     <input type="date" id="endDate" name="endDate" required>
                     <input type="time" id="endTime" name="endTime" required>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="form-middle" style="margin: auto;">
-                <label>Course/Section</label>
+                <label>Course/Section - Course Name</label>
                 <select name="courseSection" id="examManualCourseSection" required>
                     <option value="" disabled selected>Select Course Section</option>
                 </select><br>
@@ -132,7 +132,6 @@
                 <input type="number" id="invigilatorNo" name="invigilatorNo" value="1" min="1" step="1" required>    
             </div>
         </div>
-
         <input type="hidden" name="form_type" value="manual">
         <br><br>
 
@@ -150,7 +149,7 @@
         <h4 style="text-align: center;">Edit Existing Exam</h4>
         <div class="profile-frame">
             <div class="form-left">
-                <label for="editExamCourseSection">Select Exam Course/Section</label>
+                <label for="editExamCourseSection">Select Exam Course/Section - Course Name</label>
                 <select name="editExamCourseSection" id="editExamCourseSection" required>
                     <option value="" disabled selected>Select Course Section</option>
                     {% for exam in exam_data %}
@@ -165,16 +164,16 @@
                     {% endfor %}
                 </select><br>
 
-                <label>Course Name</label>
-                <input type="text" id="editCourseName" name="courseName" value="" readonly><br>
-
                 <label>Program Code</label>
                 <select id="editProgramCode" name="programCode" required>
                     <option value="" disabled selected>Select Department</option>
                     {% for dept in department_data %}
                         <option value="{{ dept.departmentCode }}">{{ dept.departmentCode }} - {{ dept.departmentName }}</option>
                     {% endfor %}
-                </select>
+                </select><br>
+                
+                <label>Number of Students</label>
+                <input type="number" id="editStudent" name="student" value="" readonly>
             </div>
 
             <div class="form-middle">
@@ -188,8 +187,13 @@
                     <option value="" disabled>Select Tutorial Lecturer</option>
                 </select><br>
 
-                <label>Number of Students</label>
-                <input type="number" id="editStudent" name="student" value="" readonly>
+                <label>Venue</label>
+                <select name="venue" id="editVenue" required>
+                    <option value="" disabled selected>Select Venue</option>
+                    {% for venue in venue_data %}
+                        <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
+                    {% endfor %}
+                </select>
             </div>
 
             <div class="form-right">
@@ -199,20 +203,12 @@
                 <label>Exam End Date & Time</label>
                 <input type="datetime-local" id="editExamEndTime" name="endDateTime" required><br>
 
-                <label>Venue</label>
-                <select name="venue" id="editVenue" required>
-                    <option value="" disabled selected>Select Venue</option>
-                    {% for venue in venue_data %}
-                        <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
-                    {% endfor %}
-                </select><br>
-
                 <label>Number of Invigilators</label>
                 <input type="number" id="editInvigilatorNo" name="invigilatorNo" value="" min="1" step="1" required>
             </div>
         </div>
-
-        <input type="hidden" name="form_type" value="edit"><br><br>
+        <input type="hidden" name="form_type" value="edit">
+        <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
             <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
@@ -464,7 +460,6 @@ document.addEventListener("DOMContentLoaded", function () {
         console.log('[DEBUG] Populating form with data:', data);
 
         const fieldMappings = {
-            'editCourseName': data.courseName,
             'editProgramCode': data.courseDepartment,
             'editStudent': data.courseStudent,
             'editVenue': data.examVenue,
@@ -509,6 +504,7 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 {% endblock %}
+
 
 
 
