--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -24,11 +24,11 @@
                     <p class="dashboard-text" style="color:green;">{{ complete_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Erros in Timetable</h3>
+                    <h3>Exams with Errors</h3>
                     <p class="dashboard-text" style="color:red;">{{ exam_data|length - complete_exam - unassigned_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Unassigned Exams</h3>
+                    <h3>Exams Not Created Yet</h3>
                     <p class="dashboard-text" style="color:red;">{{ unassigned_exam }}</p>
                 </div>
             </div>
