--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -18,15 +18,15 @@
             <div class="dashboard-row">
                 <div class="dashboard-frame pie">
                     <h3>Staff Distribution</h3>
-                    <canvas id="staffPieChart" width="300" height="300"></canvas>
+                    <canvas id="staffPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame pie">
                     <h3>Gender Distribution</h3>
-                    <canvas id="genderPieChart" width="300" height="300"></canvas>
+                    <canvas id="genderPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame pie">
                     <h3>Account Status</h3>
-                    <canvas id="statusPieChart" width="300" height="300"></canvas>
+                    <canvas id="statusPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Incompleted Data Rows</h3>
