--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -245,6 +245,7 @@
             <tbody>
                 {% for row in user_data %}
                 <tr>
+                <tr class="{% if row.userStatus == 2 or row.userDepartment is none %}error-row-show{% endif %}">
                     <td>{{ loop.index }}</td>
                     <td>{{ row.userId }}</td>
                     <td>{{ row.userName }}</td>
@@ -269,11 +270,7 @@
 
                     <!-- Department -->
                     <td>
-                        {% if row.userDepartment %}
-                            {{ row.userDepartment }}
-                        {% else %}
-                            <span style="color:red;">[ERROR]</span>
-                        {% endif %}
+                        Tutorial Lecturer: {{ row.userDepartment if row.userDepartment else "error" }}
                     </td>
 
                     <!-- Account Status + Time -->
