--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -292,7 +292,7 @@ html, body {
 
 
 .error-row-show {
-    border: 2px solid red;
+    border: 2px solid rgba(218, 82, 82, 0.719);
     background-color: #ffe5e5; /* optional light red background */
 }
 
