--- a/app/templates/dean/deanTimetable.html
+++ b/app/templates/dean/deanTimetable.html
@@ -4,63 +4,51 @@
 <div class="menu-section">
     <h2>Timetables</h2>
 
+    {% set time_slots = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
+    {% set week_days = ["MON", "TUE", "WED", "THU", "FRI"] %}
+
     <div class="user-table-container">
-        <table class="user-data-table">
+        <table class="user-data-table" border="1">
             <thead>
                 <tr>
-                    <th>Date / Time</th>
-                    <th>08:00 AM</th>
-                    <th>09:00 AM</th>
-                    <th>10:00 AM</th>
-                    <th>11:00 AM</th>
-                    <th>12:00 PM</th>
-                    <th>13:00 PM</th>
-                    <th>14:00 PM</th>
-                    <th>15:00 PM</th>
-                    <th>16:00 PM</th>
-                    <th>17:00 PM</th>
-                    <th>18:00 PM</th>
+                    <th>Day / Time</th>
+                    {% for time in time_slots %}
+                        <th>{{ time }}</th>
+                    {% endfor %}
                 </tr>
             </thead>
             <tbody>
-                {% for row in user_data %}
-                <tr>
-                    <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
-                    <td>{{ row.userId }}</td>
-                    <td>{{ row.userName }}</td>
-                    <td>{{ row.userDepartment }}</td>
-
-                    <!-- Role Name based on userLevel -->
-                    <td>
-                        {% if row.userLevel == 1 %}
-                            Lecturer
-                        {% elif row.userLevel == 2 %}
-                            Dean
-                        {% elif row.userLevel == 3 %}
-                            Admin
-                        {% else %}
-                            Unknown
-                        {% endif %}
-                    </td>
-
-                    <td>{{ row.userEmail }}</td>
-                    <td>{{ row.userContact }}</td>
-
-                    <!-- User status: Activated / Deactivated -->
-                    <td>
-                        {% if row.userStatus|int == 1 %}
-                            Activated
-                        {% else %}
-                            Deactivated
-                        {% endif %}
-                    </td>
-                </tr>
+                {% for day in week_days %}
+                    <tr>
+                        <td><strong>{{ day }}</strong></td>
+                        {% for time in time_slots %}
+                            <td>
+                                {% set ns = namespace(displayed=[]) %}
+                                {% for row in timetable_data %}
+                                    {% set class_day = row.classDay %}
+                                    {% set class_time = row.classTime %}
+                                    {% set start_time = class_time.split('-')[0] %}
+                                    {% set end_time = class_time.split('-')[1] %}
+                                    {% if class_day == day and time >= start_time and time < end_time %}
+                                        {% set key = row.lecturerName ~ row.classType ~ row.classDay ~ row.classTime ~ row.classRoom ~ row.courseName %}
+                                        {% if key not in ns.displayed %}
+                                            {% set ns.displayed = ns.displayed + [key] %}
+                                            <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                                <strong>{{ row.lecturerName }}</strong><br>
+                                                <strong>[{{ row.classType }}]</strong><br>
+                                                {{ row.courseName }}<br>
+                                                Room: {{ row.classRoom }}
+                                            </div>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                        {% endfor %}
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
 <script src="{{ url_for('static', filename='js/function.js') }}"></script>
-
-
 {% endblock %}
