--- a/app/templates/dean/deanTimetable.html
+++ b/app/templates/dean/deanTimetable.html
@@ -24,7 +24,7 @@
                         {% for time in time_slots %}
                             <td>
                                 {% set ns = namespace(displayed=[]) %}
-                                {% for row in timetable_data %}
+                                {% for row in timetable_rows %}
                                     {% set class_day = row.classDay %}
                                     {% set class_time = row.classTime %}
                                     {% set start_time = class_time.split('-')[0] %}
