--- a/app/templates/dean/deanInvigilationReport.html
+++ b/app/templates/dean/deanInvigilationReport.html
@@ -53,7 +53,8 @@
                                 ID     : {{ att.invigilator.userId }} <br>
                                 Name   : {{ att.invigilator.userName }} <br>
                                 Contact: {{ att.invigilator.userContact }} <br>
-                                Gender : {{ att.invigilator.userGender }}
+                                Gender : {{ att.invigilator.userGender }} <br>
+                                Department: {{ att.invigilator.userDepartment }}
                             </td>
                             
                             <!-- Check-in Time -->
