--- a/app/templates/dean/deanProfile.html
+++ b/app/templates/dean/deanProfile.html
@@ -3,10 +3,7 @@
 {% block content %}
 <div class="menu-section">
     <h2>Profile</h2>
-    <form method="post">
-        <label>Now display out the contact number value, everytime click on the button will show 'Similar Contact Number Update'</label><br>
-        <label>Does allow admin to change their department? Only admin able to change</label><br><br><br>
-
+    <form method="post" style="border-radius: None; border: None; box-shadow: None;">
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
