--- a/app/templates/dean/deanInvigilationReport.html
+++ b/app/templates/dean/deanInvigilationReport.html
@@ -66,7 +66,7 @@
                             <!-- Attendance Status -->
                             <td>
                                 Attendance Status: {{ att.remark }}<br>
-                                Invigilator Status: {{ att.invigilatorStatus }}
+                                Invigilator Status: {{ att.invigilationStatus }}
                             </td>
                         </tr>
                     {% endfor %}
