--- a/app/templates/dean/deanInvigilationReport.html
+++ b/app/templates/dean/deanInvigilationReport.html
@@ -29,15 +29,14 @@
                             
                                 <!-- Course & Exam Details -->
                                 <td rowspan="{{ rowspan }}">
-                                    Course Name        : {{ att.report.exam.course.courseName }} <br>
-                                    Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
-                                    Number of Students : {{ att.report.exam.course.courseStudent }}<br>
-                                    Exam Date   : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
-                                    Exam Day    : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                    Exam Time   : [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
-                                    Exam Period : [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h 
-                                                {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]<br>
-                                    Exam Venue  : [{{ att.report.exam.examVenue }}]
+                                    Exam Course Name        : {{ att.report.exam.course.courseName }} <br>
+                                    Exam Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
+                                    Exam Candidates         : {{ att.report.exam.course.courseStudent }}<br>
+                                    Exam Date               : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
+                                    Exam Day                : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    Exam Time               : [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
+                                    Exam Period             : [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]<br>
+                                    Exam Venue              : [{{ att.report.exam.examVenue }}]
                                 </td>
 
                                 <!-- Number of Invigilators -->
@@ -46,11 +45,11 @@
 
                             <!-- Invigilator Details -->
                             <td>
-                                ID     : {{ att.invigilator.userId }} <br>
-                                Name   : {{ att.invigilator.userName }} <br>
-                                Contact: {{ att.invigilator.userContact }} <br>
-                                Gender : {{ att.invigilator.userGender }} <br>
-                                Department: {{ att.invigilator.userDepartment }}
+                                ID          : {{ att.invigilator.userId }} <br>
+                                Name        : {{ att.invigilator.userName }} <br>
+                                Contact     : {{ att.invigilator.userContact }} <br>
+                                Gender      : {{ att.invigilator.userGender }} <br>
+                                Department  : {{ att.invigilator.userDepartment }}
                             </td>
                             
                             <!-- Check-in Time -->
@@ -61,12 +60,11 @@
 
                             <!-- Attendance Status -->
                             <td>{{ att.remark }}</td>
-                            <td>{{ att.invigilationStatus }}</td>
                             <td>
                                 {% if att.invigilationStatus == 1 %}
-                                    Accepted
+                                    <span style="color:green;">Accepted</span>
                                 {% else %}
-                                    Declined
+                                    <span style="color:red;">Declined</span>
                                 {% endif %}
                             </td>
                         </tr>
