--- a/app/templates/dean/deanInvigilationReport.html
+++ b/app/templates/dean/deanInvigilationReport.html
@@ -62,7 +62,9 @@
                             <td>{{ att.remark }}</td>
                             <td>
                                 {% if att.invigilationStatus == 1 %}
-                                    <span style="color:green;">Accepted</span>
+                                    <span style="color: white; background-color: green; padding: 2px 6px; border-radius: 3px;">
+                                        Accepted
+                                    </span>
                                 {% else %}
                                     <span style="color:red;">Declined</span>
                                 {% endif %}
